--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "lucide-react": "^0.344.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.3.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
@@ -64,6 +65,7 @@
   "devDependencies": {
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.56",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
